[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/main/puzzle/PuzzleMessage.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/main/ui/candy-button/h4-o.png" type="Texture" id=2]
[ext_resource path="res://src/main/ui/UiCancelShortcut.tres" type="ShortCut" id=4]
[ext_resource path="res://src/main/puzzle/puzzle-messages.gd" type="Script" id=5]
[ext_resource path="res://src/main/ui/UiMenuShortcut.tres" type="ShortCut" id=7]
[ext_resource path="res://src/main/ui/ButtonShortcutHelper.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/main/ui/candy-button/CandyButtonH3.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/main/ui/candy-button/CandyButtonH4.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/main/ui/candy-button/h3-v.png" type="Texture" id=12]
[ext_resource path="res://assets/main/ui/candy-button/h3-v-pressed.png" type="Texture" id=13]
[ext_resource path="res://assets/main/ui/candy-button/h4-o-pressed.png" type="Texture" id=14]
[ext_resource path="res://assets/main/ui/candy-button/h4-q-pressed.png" type="Texture" id=17]
[ext_resource path="res://assets/main/ui/candy-button/h4-q.png" type="Texture" id=18]

[node name="PuzzleMessages" type="Control"]
margin_left = 364.0
margin_top = 28.0
margin_right = 688.0
margin_bottom = 572.0
script = ExtResource( 5 )

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_bottom = 136.0
custom_constants/separation = 10

[node name="Start" parent="Buttons" instance=ExtResource( 10 )]
margin_left = 62.0
margin_top = 0.0
margin_right = 262.0
margin_bottom = 50.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 13 )
texture_hover = ExtResource( 12 )
text = "Start"
color = 5
shape = 8

[node name="Settings" parent="Buttons" instance=ExtResource( 11 )]
margin_left = 102.0
margin_top = 60.0
margin_right = 222.0
margin_bottom = 90.0
size_flags_horizontal = 4
size_flags_vertical = 4
shortcut = ExtResource( 7 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 14 )
texture_hover = ExtResource( 2 )
text = "Settings"
color = 7
shape = 3

[node name="ShortcutHelper" parent="Buttons/Settings" instance=ExtResource( 9 )]
action = "ui_cancel"
overridden_action = "ui_menu"

[node name="Back" parent="Buttons" instance=ExtResource( 11 )]
margin_left = 102.0
margin_top = 100.0
margin_right = 222.0
margin_bottom = 130.0
size_flags_horizontal = 4
size_flags_vertical = 4
shortcut = ExtResource( 4 )
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 17 )
texture_hover = ExtResource( 18 )
text = "Back"
color = 1
shape = 5

[node name="PuzzleMessage" parent="." instance=ExtResource( 1 )]
mouse_filter = 2

[node name="HideMessageTimer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="pressed" from="Buttons/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Buttons/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Buttons/Back" to="." method="_on_Back_pressed"]
[connection signal="timeout" from="HideMessageTimer" to="." method="_on_HideMessageTimer_timeout"]
